tests/paczka1/fuzzy1/73166420.err
Error in line 2: 5ki7PyKy A636 95,7
Error in line 1: dJK A988 20,6
Error in line 6: dJK A468 94,0
Error in line 12: 5ki7PyKy A988 83,0
Error in line 19: cI60dQYPPx A988 6,7
Error in line 32: dJK A988 -1,6
Error in line 31: npY65TDt A636 93,5
